--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Stephen's Test</title>
+<title>jOS by Jacob Poeschel</title>
 <link rel="icon" type="image/x-icon" href="./penguin.png">
 <frameset border="1" cols="170,*">
     <frame name="toc" src="toc.html">
