--- a/popup.html
+++ b/popup.html
@@ -62,12 +62,12 @@
         });
     }
 </script>
-<title>391OS-36 Online Demo</title>
+<title>jOS Online Demo</title>
 <div id="screen_container">
     <div id="emu_text"></div>
     <canvas id="emu_screen"></canvas>
     <p id="hint_text">
         <b>Press Alt+F1/F2/F3 to switch terminal, Press Ctrl+L to Clear Screen.</br>
-        Pingpong will require restart to exit from.</b>
+        Press Ctrl+C or ESC to close programs.</b>
     </p>
 </div>
