--- a/toc.html
+++ b/toc.html
@@ -16,13 +16,13 @@
         font-size: 20px;
     }
 </style>
-<h3 align="center">Our Custom OS:</h3>
-<h4 align="center">By Stephen, Will</br>Jack, and Manas</h4>
+<h3 align="center">jOS:</h3>
+<h4 align="center">By Jacob, Meredith</br>Jimmy, and Mikey</h4>
 <h5 align="center">Computer Systems<br>Project</h5>
 <hr>
 <p>
-    <a href="demo.html" target="main">The OS</a><br>
-    <a href="overview.html" target="main">Tech Overview</a><br>
+    <a href="demo.html" target="main">jOS</a><br>
+    <a href="overview.html" target="main">Tech Writeup</a><br>
     <a href="about.html" target="main">About</a><br>
 </p>
 <hr>
