--- a/about.html
+++ b/about.html
@@ -17,18 +17,18 @@
         color: #C5C6C7;
     }
 </style>
-<title>About Our OS</title>
-<h2>Background Of Our Operating System</h2>
+<title>About jOS (Jormungandr Operating System)</title>
+<h2>jOS</h2>
 <hr>
 <h3></h3>
 <p>
-    Our operating system is the culmination of 6 weeks of work and >5,000 lines of code written by me: Stephen Simberg, and the BEASTS: <a href="https://coombsos.info" target="_blank">Will</a>, <a href="https://os-prokop.info" target="_blank">Jack</a>, and Manas.<br>
+    Our operating system is the culmination of 6 weeks of work and >10,000 lines of code written by Jacob Poeschel, Meredith Naylor, Mikey Kraus, and Jimmy McLaughlin.
     This project was created and tested in the last half of our <a href="https://courses.grainger.illinois.edu/ECE391/sp2023/" target="_blank">Computer Systems Engineering course: ECE 391</a> at UIUC.<br>
 </p>
 <h3>Website Design</h3>
 <p>
     The website design is based off the <a href="https://courses.grainger.illinois.edu/ece391/" target="_blank">ECE 391 website</a> and the open source code written by the wonderful Paizhang</a>: <a href="https://github.com/stephenhsimberg/The-Best-OS/blob/main/LICENSE" target="_blank">MIT License.</a><br>
-    Check out the <a href="./overview.html" target="_blank">Technical Overview</a> to see actual work that was done. <br>
+    Check out the <a href="./overview.html" target="_blank">Technical Writeup</a> to see actual work that was done. <br>
 </p>
 <h3>How the OS Emulation Was Made:</h3>
 <p>
@@ -37,6 +37,6 @@
 </p>
 <h3>Contact</h3>
 <p>
-    stephenhsimberg@gmail.com
+    jpoe1624@gmail.com
 </p>
 <hr>
