--- a/overview.html
+++ b/overview.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <style>
     a:link {
-        color: #C3073F; 
+        color: #f4eff0; 
         background-color: transparent;
     }
     a:visited {
-        color: #C3073F;
+        color: #f4eff0;
         background-color: transparent;
     }
     th {
-        background-color: #950740;
+        background-color: #1e5bdf;
     }
-    tr:hover {background-color: #6F2232;}
+    tr:hover {background-color: #1e5bdf;}
     #toc_container
     {
         border: 2px solid #aaa;
@@ -23,7 +23,7 @@
     {
         font-weight: bold;
         text-align: center;
-        color:#C3073F;
+        color:#f4eff0;
     }
 
     #toc_list
@@ -36,7 +36,7 @@
         color: #C5C6C7;
     }
 </style>
-<title>OS Technical Overview</title>
+<title>jOS Technical Overview</title>
 <h2 id="top">Technical Overview</h2>
 <hr>
 <div id="toc_container">
@@ -59,19 +59,19 @@
             <li><a href="#proctrl">Process Control</a></li>
             <li><a href="#multerm">Multiterminals</a></li>
             <li><a href="#scheduler">Scheduler</a></li>
+            <li><a href="#gui">GUI</a></li>
+            <li><a href="#chip8">chip8</a></li>
+            <li><a href="#userprograms">UserPrograms</a></li>
         </ul>
     </p>
 </div>
 
-<h3 id="cmd">Implimented as personal project, independent of class requirements: </h3>
+<h3 id="cmd">Minor functionalities implemented outside of class requirements:</h3>
 <p>
     <b>Mouse Driver:</b> Allows for packets generated from moving and pressing the mouse to be recognized and responded to by the kernel. Works with text scrolling.<br>
-    <b>Simple GUI:</b> Uses the mouse location on the terminal to run executables.<br>
-    <b>Auto-Complete on Tab:</b> When tab is pressed and at least two characters have been inputted that match an executable, terminal will auto-complete file name.<br>
-    <b>Command History:</b> Will remember last command inputted on current terminal and will add to buffer on up-arrow press. Works on terminals independently.<br>
-    <b>Color:</b> Able to change color of background and text of current terminal.<br>
-    <b>Paint:</b> A fun program that allows for user to color screen. Shows cursor and right click changes current color.<br>
-    <b>Status Bar:</b> In GUI shows welcome message and on executables displays unique text. In terminal shows pid, name of executable running, and current terminal.<br>
+    <b>Command History:</b> Supports up and down arrow presses to move between 5 most recent commands. Implemented seperately on each terminal.<br>
+    <b>CTRL+C:</b> Support for terminating programs through CTRL+C.<br>
+    <b>Status Bar:</b> Displays terminal number, process number, and current executing program.<br>
 </p>
 
 
@@ -89,42 +89,10 @@
         <td>clear</td>
         <td>Clears current terminal screen.</td>
     </tr>
-     <tr>
-        <td>color</td>
-        <td>Choose font and background color of current terminal screen.</td>
-    </tr>
     <tr>
         <td>[Executable] [Arg]</td>
-        <td>Search and open the program in the current terminal.<br>Some program may require arguments (see below).</td>
+        <td>Search and open the program in the current terminal.<br>Some programs may require arguments (see below).</td>
     </tr>
-</table>
-<h3 id="combkey">Combinational Keys</h3>
-<table border="2" cellpadding="5">
-    <tr>
-        <th bgcolor="#ccffff">Combination</th>
-        <th bgcolor="#ccffff">Action</th>
-        <th bgcolor="#ccffff">Description</th>
-    </tr>
-    <tr>
-        <td>Alt+F1</td>
-        <td>Switch to Terminal 1</td>
-        <td>(See below)</td>
-    </tr>
-   <tr>
-        <td>Alt+F2</td>
-        <td>Switch to Terminal 2</td>
-        <td>(See below)</td>
-    </tr> 
-    <tr>
-        <td>Alt+F3</td>
-        <td>Switch to Terminal 3</td>
-        <td>(See below)</td>
-    </tr>
-    <tr>
-        <td>Ctrl+L</td>
-        <td>Clear Screen</td>
-        <td>Clear the VRAM and reset the cursor.</td>
-    </tr>   
 </table>
 <h3 id="fsdir">File System Directory</h3>
 <table border="2" cellpadding="5">
@@ -161,7 +129,7 @@
     <tr>
         <td>rtc</td>
         <td>Device</td>
-        <td>Giving user-level access to the real-time clock (RTC).</td>
+        <td>Gives user-level access to the real-time clock (RTC).</td>
     </tr>  
     <tr>
         <td>fish</td>
@@ -221,9 +189,7 @@
 </table>
 <h3 id="linkage">Assembly Linkages</h3>
 <p>
-    Whenever there is a trap, processor jumps to the assmebly linkage from the IDT.<br>
-    Assembly linkages for interruption, exception, and system calls are different, but they all construct a hardware context for furture restoring or usage.<br>
-    They will also push/pass through arguments accordingly, and call the corresponding handlers.
+    Assembly linkage is implemented to connect interrupts, exceptions, and syscalls from the IDT into the desired handler.
 </p>
 <h3 id="exception">Exception Handlers</h3>
 <p>
@@ -232,29 +198,30 @@
 <h3 id="int">Interrupt Handlers</h3>
 <p>
     Linkage pushes information and calls an unified interrupt handler.<br>
-    Then the handler will dispatch to the corresponding drivers.<br>
+    The handler will dispatch to the corresponding drivers.<br>
     The IRQ lines are managed by two i8259 PICs just like any other classic IBM-compatible PC.<br>
 </p>
 <h3 id="dev">Supported Devices</h3>
 <p>
-    Contains drivers for the standard keyboard, programmable interval timer (PIT), real-time clock (RTC), and terminal.<br>
+    Contains drivers for the standard keyboard, programmable interval timer (PIT), real-time clock (RTC), terminal, and mouse.<br>
     The standard keyboard driver adds support for capital letter handling and combinational keys.<br>
-    The PIT driver is used to handle the scheduling and can be turned off (see below).<br>
-    The RTC driver supports frenquency adjusting and is "virtualized," so each process has its own RTC instance (see below).<br>
+    The PIT driver is used to handle program scheduling.<br>
+    The RTC driver supports frenquency adjusting and is "virtualized". Each process has its own RTC instance (see below).<br>
     The terminal driver is for standard input and output and works with keyboard driver. The input buffer is limited at 128-characters.<br>
+    The mouse driver implements a mouse cursor and handles mouse packets. The mouse is usable in the GUI.<br>
 </p>
 <h3 id="memaddr">Memory Addressing</h3>
 <p>
-    The OS bypasses segmentation just like any modern operation systems, only paging was used for memory addressing.<br>
+    jOS bypasses segmentation by fixing each segment to correspond to the entire addresses space. Paging is used to implement virtual memory.<br>
     The memory layout is fixed (see below).<br>
 </p>
 <h3 id="pmem">Physical Memory Layout</h3>
 <p>
     From low to high, 32MB of physical memory is utilized:<br>
     <ul>
-        <li>4MB space with several 4KB space for the VRAM</li>
-        <li>4MB space for kernel data and stacks</li>
-        <li>Several 4MB spaces for user applications</li>
+        <li>0 - 4MB: 4kB pages containing relevant video memory.</li>
+        <li>4MB - 8MB: 4MB page for all kernel data including PCBs and program stacks.</li>
+        <li>8MB - 32MB: 4MB pages for user programs.</li>
     </ul>
 </p>
 <h3 id="vmem">Virtual Memory Layout</h3>
@@ -271,12 +238,13 @@
 <p>
     The File System has a total size of 8MB, and is divided into 4KB blocks of one boot block, inodes, and data blocks.<br>
     Each boot block can track up to 62 inodes and one root directory, and each inode can track up to 1023 data blocks.<br>
-    The limitations are up to 62 files of 4092KB size and 32 characters name length. Also, it does not support hierarchy and is read-only.<br>
+    The limitations are up to 62 files of 4092KB size and 32 characters name length. Also, it generally does not support hierarchy and is read-only.<br>
+    We have exteneded its implementation through the use of the VIM user program along with create and remove syscalls to allow the system to be writable. 
     <img src="Image 5-7-23 at 10.51 AM.jpg" alt="Filesystem" style="width:250px;height:120px;">
 </p>
 <h3 id="fsabst">File System Abstraction</h3>
 <p>
-    The OS treats any files, device (RTC), and directory as files. Each process has a dynamic file descriptor (FD) that supports 8 open files.<br>
+    The OS treats any files, device (RTC), and directory as files. Each process has a dynamic file descriptor array (FD) that supports 8 open files.<br>
     According to the file type, each entry tracks inode, position, flags, and an operation jump table, and is utilized by syscalls (see below).<br>
 </p>
 <h3 id="syscall">System Calls</h3>
@@ -287,7 +255,7 @@
     </tr>
     <tr>
         <td>halt</td>
-        <td>Halt the current program (process).</td>
+        <td>Halt the current program.</td>
     </tr>
    <tr>
         <td>execute</td>
@@ -329,6 +297,41 @@
 <p>
     <i>Please note that the last two system calls are not implimented as signals are not present.</i>
 </p>
+<h3 id="syscall">Extended System Calls</h3>
+<table border="2" cellpadding="5">
+    <tr>
+        <th bgcolor="#ccffff">System Call</th>
+        <th bgcolor="#ccffff">Description</th>
+    </tr>
+    <tr>
+        <td>create</td>
+        <td>Used to insert or remove a file from the filesystem.</td>
+    </tr>
+    <tr>
+        <td>theme</td>
+        <td>Used by the theme user program to modifiy the attribute colors of each terminal to set themes.</td>
+    </tr>
+    <tr>
+        <td>screen</td>
+        <td>Used by various user programs to manage paging and screen saving.</td>
+    </tr>
+    <tr>
+        <td>edit_scroll</td>
+        <td>Used by various user programs to enable or disable scrolling.</td>
+    </tr>
+    <tr>
+        <td>retrieve_key</td>
+        <td>Syscall used by GUI and chip8 user programs to fetch current keyboard input.</td>
+    </tr>
+    <tr>
+        <td>retrieve_mouse</td>
+        <td>Syscall used by GUI to access mouse data.</td>
+    </tr>
+    <tr>
+        <td>update_attrib</td>
+        <td>Syscall used to modify the color for themes.</td>
+    </tr>
+</table>
 <h3 id="proctrl">Process Control</h3>
 <p>
     Supports up to 6 processes. Each process holds a process control block (PCB) in the kernel.<br>
@@ -344,7 +347,22 @@
     Supports a round-robin scheduler through sequential PIT interrupts.<br>
     The scheduler schedules 3 processes that is shown on each terminal, called active processes, so they can multitask.<br>
     But only one process is "actually" running, called running process.<br>
-    
+</p>
+<h3 id="gui">GUI</h3>
+<p>
+    Supports arrow keys or mouse for navigation. Click or press enter to select a program.<br>
+    Some programs may require arguments. If this is the case, you must enter the arguments once the program is selected.<br>
+</p>
+<h3 id="chip8">Chip8 Modified Emulator</h3>
+<p>
+    Enter "chip8 |rom|"" to run the emulator. Avaialable roms: test, breakout, invaders, tetris, ibm.<br>
+    Chip8 is a modified instruction set which many retro games have been ported to. In this OS, we have<br>
+    made use of publicly available roms and simply created a program to translate their instructions.
+</p>
+<h3 id="userprograms">User Programs</h3>
+<p>
+    jOS implements several user programs. Run "help" to see a list of these programs.<br>
+    Notable programs include: vim, rm, matrix, and theme. 
 </p>
 <hr>
 <b><a href="#top">Back to Top</a></b>
