--- a/toc.html
+++ b/toc.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <style>
      a:link {
-        color: #C3073F; 
+        color: #1e5bdf; 
         background-color: transparent;
     }
     a:visited {
-        color: #C3073F;
+        color: #1e5bdf;
         background-color: transparent;
     }
 
