--- a/demo.html
+++ b/demo.html
@@ -101,6 +101,7 @@
     <canvas id="emu_screen"></canvas>
     <p id="hint_text">
         <i>CLICK ON EMULATOR SCREEN BEFORE BOOT TO LOAD KB AND MOUSE.</i><br>
+        <b>IF THE GUI PAGE-FAULTS, PLEASE RELOAD THE TAB AND TRY AGAIN.<br>
         <b>Use the mouse to click on appications, and press ESC or CTRL+C to exit!<br>
         In terminal press Alt+F1/F2/F3 to switch terminal<br>
         and press Ctrl+L to Clear Screen.</br>
